--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "obsidian-custom-note-width",
-	"version": "1.0.0",
-	"description": "A plugin for Obsidian that enables you to easily adjust the editor's line width on a note-by-note basis. You can do this by using a simple slider located in the status bar or the adjacent textbox.",
+	"name": "custom-note-width",
+	"version": "1.0.1",
+	"description": "A plugin for Obsidian that enables you to easily adjust the editor's line width on a note-by-note basis. You can do this by using a simple slider located in the status bar or the adjacent text box.",
 	"main": "main.js",
 	"scripts": {
 		"dev": "node esbuild.config.mjs",
