--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # vscode
-.vscode 
+.vscode
 
 # Intellij
 *.iml
@@ -38,3 +38,12 @@ condition.txt
 tsconfig.json
 version-bump.mjs
 esbuild.config.mjs
+
+#misc
+app.json
+appearance.json
+workspace.json
+hotkeys.json
+core-plugins.json
+core-plugins-migration.json
+package-lock.json
